--- a/cors.html
+++ b/cors.html
@@ -15,7 +15,7 @@
                 method: "GET",
                 credentials: "include",
                 headers: {
-                    "Origin": "https://your-unrelated-domain.com"
+                    "Origin": "https://www.rgsdfgdg.com"
                 }
             })
             .then(response => {
