--- a/cors.html
+++ b/cors.html
@@ -15,7 +15,7 @@
                 method: "GET",
                 credentials: "include",
                 headers: {
-                    "Origin": "https://www.rgsdfgdg.com"
+                    "Origin": "https://stargazer0.github.io" // 수정된 Origin 헤더
                 }
             })
             .then(response => {
